@startuml er-diagram

title Fintech System - Entity Relationship Diagram

package "Core" {
  entity "Customer" as Customer {
    * customer_id : UUID
    --
    * name : text
    email : text
    kyc_status : text
    created_at : datetime
  }

  entity "UserPreference" as UserPreference {
    * preference_id : UUID
    --
    * customer_id : UUID
    theme : text
    language : text
    notifications_enabled : boolean
    updated_at : datetime
  }

  entity "Account" as Account {
    * account_id : UUID
    --
    * customer_id : UUID
    account_type : text
    currency : text
    status : text
    opened_at : datetime
  }

  entity "Portfolio" as Portfolio {
    * portfolio_id : UUID
    --
    * account_id : UUID
    name : text
    base_currency : text
    created_at : datetime
  }
}

package "Reference and positions" {
  entity "Instrument" as Instrument {
    * instrument_id : UUID
    --
    symbol : text
    name : text
    asset_class : text
    currency : text
    exchange : text
  }

  entity "Position" as Position {
    * position_id : UUID
    --
    * portfolio_id : UUID
    * instrument_id : UUID
    quantity : decimal
    cost_basis : decimal
    as_of_date : date
  }

  entity "Watchlist" as Watchlist {
    * watchlist_id : UUID
    --
    * customer_id : UUID
    name : text
    created_at : datetime
  }

  entity "WatchlistItem" as WatchlistItem {
    * watchlist_item_id : UUID
    --
    * watchlist_id : UUID
    * instrument_id : UUID
    added_at : datetime
  }
}

package "Instrument extensions" {
  entity "Bond" as Bond {
    * bond_id : UUID
    --
    * instrument_id : UUID
    face_value : decimal
    coupon_rate : decimal
    ytm : decimal
    duration : decimal
    convexity : decimal
    maturity_years : decimal
    frequency : integer
  }

  entity "Option" as Option {
    * option_id : UUID
    --
    * instrument_id : UUID
    * underlying_instrument_id : UUID
    strike : decimal
    expiry : datetime
    option_type : text
    risk_free_rate : decimal
    volatility : decimal
    bs_price : decimal
    delta : decimal
    gamma : decimal
    theta : decimal
    vega : decimal
    rho : decimal
    implied_volatility : decimal
  }
}

package "Trading" {
  entity "Order" as Order {
    * order_id : UUID
    --
    * account_id : UUID
    * instrument_id : UUID
    side : text
    quantity : decimal
    order_type : text
    status : text
    created_at : datetime
  }

  entity "Trade" as Trade {
    * trade_id : UUID
    --
    * order_id : UUID
    quantity : decimal
    price : decimal
    fee : decimal
    executed_at : datetime
  }
}

package "Payments and settlement" {
  entity "Transaction" as Transaction {
    * transaction_id : UUID
    --
    * account_id : UUID
    type : text
    amount : decimal
    currency : text
    status : text
    created_at : datetime
  }

  entity "Payment" as Payment {
    * payment_id : UUID
    --
    * account_id : UUID
    counterparty : text
    amount : decimal
    currency : text
    status : text
    created_at : datetime
  }

  entity "Settlement" as Settlement {
    * settlement_id : UUID
    --
    * trade_id : UUID
    * payment_id : UUID
    status : text
    settled_at : datetime
  }
}

package "Market and risk" {
  entity "MarketData" as MarketData {
    * data_id : UUID
    --
    * instrument_id : UUID
    timestamp : datetime
    open : decimal
    high : decimal
    low : decimal
    close : decimal
    volume : decimal
    change_pct : decimal
  }

  entity "TechnicalIndicator" as TechnicalIndicator {
    * indicator_id : UUID
    --
    * instrument_id : UUID
    * data_id : UUID
    ma : decimal
    ema : decimal
    rsi : decimal
    macd : decimal
    volatility : decimal
    volume_metric : decimal
  }

  entity "RiskMetrics" as RiskMetrics {
    * metric_id : UUID
    --
    * portfolio_id : UUID
    as_of_date : date
    risk_level : text
    volatility : decimal
    sharpe_ratio : decimal
    var : decimal
    beta : decimal
  }
}

package "Analytics and valuation" {
  entity "PortfolioOptimization" as PortfolioOptimization {
    * optimization_id : UUID
    --
    * portfolio_id : UUID
    as_of_date : date
    weights_json : text
    expected_return : decimal
    variance : decimal
    sharpe_ratio : decimal
    efficient_frontier_json : text
    constraints_json : text
  }

  entity "Statistical" as Statistical {
    * stat_id : UUID
    --
    * instrument_id_1 : UUID
    * instrument_id_2 : UUID
    as_of_date : date
    correlation : decimal
    beta : decimal
    alpha : decimal
    fama_french_factors : text
    regression_coefs : text
  }

  entity "Valuation" as Valuation {
    * valuation_id : UUID
    --
    * instrument_id : UUID
    as_of_date : date
    method : text
    ev : decimal
    equity_value : decimal
    target_price : decimal
    multiples : decimal
    discount_rate : decimal
    growth_rate : decimal
  }
}

package "Blockchain simulation" {
  entity "Block" as Block {
    * block_index : integer
    --
    timestamp : datetime
    previous_hash : text
    hash : text
    created_at : datetime
  }

  entity "ChainTransaction" as ChainTransaction {
    * tx_id : UUID
    --
    * block_index : integer
    * sender_account_id : UUID
    * receiver_account_id : UUID
    amount : decimal
    currency : text
    created_at : datetime
  }

  entity "WalletBalance" as WalletBalance {
    * account_id : UUID
    * currency : text
    --
    balance : decimal
    updated_at : datetime
  }
}

Customer ||--|| UserPreference : has
Customer ||--o{ Account : holds
Account ||--o{ Portfolio : owns
Portfolio ||--o{ Position : contains
Instrument ||--o{ Position : held as
Customer ||--o{ Watchlist : creates
Watchlist ||--o{ WatchlistItem : contains
Instrument ||--o{ WatchlistItem : listed in
Instrument ||--o| Bond : bond details
Instrument ||--o| Option : option details
Option }o--|| Instrument : underlying
Account ||--o{ Order : places
Instrument ||--o{ Order : ordered
Order ||--o{ Trade : executes
Instrument ||--o{ Trade : traded
Account ||--o{ Transaction : has
Account ||--o{ Payment : makes
Trade ||--o| Settlement : settles
Payment ||--o{ Settlement : funds
Instrument ||--o{ MarketData : has
MarketData ||--o{ TechnicalIndicator : computes
Instrument ||--o{ TechnicalIndicator : for
Portfolio ||--o{ RiskMetrics : assessed by
Portfolio ||--o| PortfolioOptimization : optimized
Instrument ||--o{ Statistical : asset1
Instrument ||--o{ Statistical : asset2
Instrument ||--o{ Valuation : valuation result
MarketData ||--o{ Valuation : valuation input

Block ||--o{ ChainTransaction : contains
Account ||--o{ ChainTransaction : sends
Account ||--o{ ChainTransaction : receives
Account ||--o{ WalletBalance : has

@enduml
